--- a/package.json
+++ b/package.json
@@ -6,29 +6,40 @@
   "author": "Patrik Holcak <patrik@holcak.com> (http://holcak.com)",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^1.2.0",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-document-meta": "^2.0.0-rc2",
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc3"
   },
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.1.1",
-    "css-loader": "^0.19.0",
+    "css-loader": "^0.20.2",
+    "envify": "^3.4.0",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
-    "postcss-loader": "^0.6.0",
-    "postcss-mixins": "^1.0.2",
+    "history": "^1.12.5",
+    "postcss-loader": "^0.7.0",
+    "postcss-mixins": "^2.1.0",
     "postcss-nested": "^1.0.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.1.1",
-    "style-loader": "^0.12.4",
+    "static-site-generator-webpack-plugin": "^1.2.0",
+    "style-loader": "^0.13.0",
+    "transform-loader": "^0.2.3",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.4.1"
   },
   "scripts": {
-    "production": "NODE_ENV=production webpack --config webpack.config.prod.js",
+    "start": "node server.js",
+    "build": "webpack --config webpack.config.prod.js --colors --progress",
+    "production": "NODE_ENV=production npm run build&&rm dist/renderer.*",
+    "gh-pages": "gh-pages -d dist/",
+    "deploy": "./deploy.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
